--- a/WeatherbyOzluk/UI/Storyboards/AddLocation.storyboard
+++ b/WeatherbyOzluk/UI/Storyboards/AddLocation.storyboard
@@ -23,28 +23,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ASV-ej-vit">
-                                <rect key="frame" x="10" y="10" width="373" height="832"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ASV-ej-vit">
+                                <rect key="frame" x="16" y="20" width="357" height="812"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddNewCity" id="Yl4-8M-Qd5" customClass="CitiesToAddTableViewCell" customModule="WeatherbyOzluk" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="373" height="49.333332061767578"/>
+                                        <rect key="frame" x="0.0" y="50" width="357" height="69.333335876464844"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yl4-8M-Qd5" id="bkl-eq-GFs">
-                                            <rect key="frame" x="0.0" y="0.0" width="373" height="49.333332061767578"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="357" height="69.333335876464844"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7py-zQ-8Yh">
-                                                    <rect key="frame" x="10" y="9.9999999999999982" width="353" height="29.333333333333329"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7py-zQ-8Yh">
+                                                    <rect key="frame" x="20" y="20" width="317" height="29.333333333333329"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETf-4W-rYl">
-                                                            <rect key="frame" x="0.0" y="6.3333333333333321" width="313" height="16.666666666666668"/>
+                                                            <rect key="frame" x="0.0" y="6.3333333333333321" width="279" height="16.666666666666668"/>
                                                             <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
                                                             <color key="textColor" name="colorLbl3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="999" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAT-Sv-4tX">
-                                                            <rect key="frame" x="323" y="0.33333333333333393" width="30" height="29"/>
+                                                            <rect key="frame" x="287" y="0.33333333333333215" width="30" height="29"/>
                                                             <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
                                                             <state key="normal" title="Add">
                                                                 <color key="titleColor" name="purple"/>
@@ -57,10 +57,10 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="7py-zQ-8Yh" firstAttribute="top" secondItem="bkl-eq-GFs" secondAttribute="top" constant="10" id="5jg-DJ-yca"/>
-                                                <constraint firstAttribute="trailing" secondItem="7py-zQ-8Yh" secondAttribute="trailing" constant="10" id="Bnv-EF-EFk"/>
-                                                <constraint firstAttribute="bottom" secondItem="7py-zQ-8Yh" secondAttribute="bottom" constant="10" id="Pgs-3y-8QJ"/>
-                                                <constraint firstItem="7py-zQ-8Yh" firstAttribute="leading" secondItem="bkl-eq-GFs" secondAttribute="leading" constant="10" id="xwd-ht-SGN"/>
+                                                <constraint firstItem="7py-zQ-8Yh" firstAttribute="top" secondItem="bkl-eq-GFs" secondAttribute="top" constant="20" symbolic="YES" id="5jg-DJ-yca"/>
+                                                <constraint firstAttribute="trailing" secondItem="7py-zQ-8Yh" secondAttribute="trailing" constant="20" symbolic="YES" id="Bnv-EF-EFk"/>
+                                                <constraint firstAttribute="bottom" secondItem="7py-zQ-8Yh" secondAttribute="bottom" constant="20" symbolic="YES" id="Pgs-3y-8QJ"/>
+                                                <constraint firstItem="7py-zQ-8Yh" firstAttribute="leading" secondItem="bkl-eq-GFs" secondAttribute="leading" constant="20" symbolic="YES" id="xwd-ht-SGN"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
@@ -75,10 +75,10 @@
                         <viewLayoutGuide key="safeArea" id="JBu-RW-5Jt"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ASV-ej-vit" secondAttribute="trailing" constant="10" id="ODB-2p-rO4"/>
-                            <constraint firstItem="ASV-ej-vit" firstAttribute="top" secondItem="PNu-BZ-OQl" secondAttribute="top" constant="10" id="Qpl-yX-Pi6"/>
-                            <constraint firstItem="ASV-ej-vit" firstAttribute="leading" secondItem="JBu-RW-5Jt" secondAttribute="leading" constant="10" id="p1J-9p-Cwp"/>
-                            <constraint firstAttribute="bottom" secondItem="ASV-ej-vit" secondAttribute="bottom" constant="10" id="xYc-AY-srQ"/>
+                            <constraint firstAttribute="trailing" secondItem="ASV-ej-vit" secondAttribute="trailing" constant="20" symbolic="YES" id="ODB-2p-rO4"/>
+                            <constraint firstItem="ASV-ej-vit" firstAttribute="top" secondItem="PNu-BZ-OQl" secondAttribute="top" constant="20" symbolic="YES" id="Qpl-yX-Pi6"/>
+                            <constraint firstItem="ASV-ej-vit" firstAttribute="leading" secondItem="JBu-RW-5Jt" secondAttribute="leading" constant="16" id="p1J-9p-Cwp"/>
+                            <constraint firstAttribute="bottom" secondItem="ASV-ej-vit" secondAttribute="bottom" constant="20" symbolic="YES" id="xYc-AY-srQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title=" " id="BIo-Bk-Eik">
