--- a/WeatherbyOzluk/UI/Storyboards/LocationList.storyboard
+++ b/WeatherbyOzluk/UI/Storyboards/LocationList.storyboard
@@ -29,39 +29,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="paV-qO-R8s">
-                                <rect key="frame" x="10" y="69" width="373" height="759"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="paV-qO-R8s">
+                                <rect key="frame" x="20" y="79" width="353" height="753"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CitiesTableViewCell" id="y15-sr-FoC" customClass="CitiesTableViewCell" customModule="WeatherbyOzluk" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="373" height="57.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="50" width="353" height="81.666664123535156"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="y15-sr-FoC" id="lIE-Jq-lVB">
-                                            <rect key="frame" x="0.0" y="0.0" width="373" height="57.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="353" height="81.666664123535156"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="osz-Cv-xRF">
-                                                    <rect key="frame" x="36" y="10" width="301" height="37.666666666666664"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="osz-Cv-xRF">
+                                                    <rect key="frame" x="20" y="19.999999999999996" width="313" height="41.666666666666657"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="999" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Oyp-t7-NQk">
-                                                            <rect key="frame" x="0.0" y="3" width="32" height="32"/>
+                                                            <rect key="frame" x="0.0" y="5" width="32" height="32"/>
                                                             <color key="tintColor" name="purple"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="32" id="Kvy-WV-9OF"/>
                                                                 <constraint firstAttribute="height" constant="32" id="P4q-Is-lf8"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="4hG-oq-hS8">
-                                                            <rect key="frame" x="64" y="0.33333333333333215" width="156" height="37.333333333333343"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4hG-oq-hS8">
+                                                            <rect key="frame" x="40" y="0.33333333333333215" width="216" height="41.333333333333343"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dBd-iA-v2d">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="156" height="16.666666666666668"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="216" height="16.666666666666668"/>
                                                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
                                                                     <color key="textColor" name="colorLbl3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pur-qX-xPy">
-                                                                    <rect key="frame" x="0.0" y="20.666666666666664" width="156" height="16.666666666666664"/>
+                                                                    <rect key="frame" x="0.0" y="24.666666666666664" width="216" height="16.666666666666664"/>
                                                                     <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="12"/>
                                                                     <color key="textColor" name="purple"/>
                                                                     <nil key="highlightedColor"/>
@@ -69,7 +69,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7p1-7p-S9K">
-                                                            <rect key="frame" x="252" y="7.0000000000000018" width="49" height="23.666666666666671"/>
+                                                            <rect key="frame" x="264" y="9.0000000000000018" width="49" height="23.666666666666671"/>
                                                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="20"/>
                                                             <color key="textColor" name="purple"/>
                                                             <nil key="highlightedColor"/>
@@ -78,10 +78,10 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="osz-Cv-xRF" firstAttribute="leading" secondItem="lIE-Jq-lVB" secondAttribute="leading" constant="36" id="3LM-W3-K8A"/>
-                                                <constraint firstAttribute="bottom" secondItem="osz-Cv-xRF" secondAttribute="bottom" constant="10" id="9Qg-Di-qNw"/>
-                                                <constraint firstAttribute="trailing" secondItem="osz-Cv-xRF" secondAttribute="trailing" constant="36" id="Q67-ct-o41"/>
-                                                <constraint firstItem="osz-Cv-xRF" firstAttribute="top" secondItem="lIE-Jq-lVB" secondAttribute="top" constant="10" id="hS7-67-Nsz"/>
+                                                <constraint firstItem="osz-Cv-xRF" firstAttribute="leading" secondItem="lIE-Jq-lVB" secondAttribute="leading" constant="20" symbolic="YES" id="3LM-W3-K8A"/>
+                                                <constraint firstAttribute="bottom" secondItem="osz-Cv-xRF" secondAttribute="bottom" constant="20" symbolic="YES" id="9Qg-Di-qNw"/>
+                                                <constraint firstAttribute="trailing" secondItem="osz-Cv-xRF" secondAttribute="trailing" constant="20" symbolic="YES" id="Q67-ct-o41"/>
+                                                <constraint firstItem="osz-Cv-xRF" firstAttribute="top" secondItem="lIE-Jq-lVB" secondAttribute="top" constant="20" symbolic="YES" id="hS7-67-Nsz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
@@ -98,10 +98,10 @@
                         <viewLayoutGuide key="safeArea" id="bd1-ej-VuA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="paV-qO-R8s" firstAttribute="leading" secondItem="bd1-ej-VuA" secondAttribute="leading" constant="10" id="AnI-nQ-Fnp"/>
-                            <constraint firstItem="paV-qO-R8s" firstAttribute="top" secondItem="bd1-ej-VuA" secondAttribute="top" constant="10" id="nXv-Ch-STk"/>
-                            <constraint firstItem="paV-qO-R8s" firstAttribute="bottom" secondItem="bd1-ej-VuA" secondAttribute="bottom" constant="10" id="r04-Kh-JxB"/>
-                            <constraint firstItem="bd1-ej-VuA" firstAttribute="trailing" secondItem="paV-qO-R8s" secondAttribute="trailing" constant="10" id="zBT-F3-HYC"/>
+                            <constraint firstItem="paV-qO-R8s" firstAttribute="top" secondItem="bd1-ej-VuA" secondAttribute="top" constant="20" id="8gL-VR-o47"/>
+                            <constraint firstAttribute="bottom" secondItem="paV-qO-R8s" secondAttribute="bottom" constant="20" id="OcM-os-w0z"/>
+                            <constraint firstItem="paV-qO-R8s" firstAttribute="leading" secondItem="bd1-ej-VuA" secondAttribute="leading" constant="20" id="S5t-wq-pyT"/>
+                            <constraint firstItem="bd1-ej-VuA" firstAttribute="trailing" secondItem="paV-qO-R8s" secondAttribute="trailing" constant="20" id="w2S-d5-g4v"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Locations" largeTitleDisplayMode="always" id="JdC-2x-BZg">
